# MagicHandy

./: .gitattributes  .gitignore  .golangci.yml  AGENTS.md  AI-GUIDELINE.md  IMPLEMENTATION_PLAN.md  Iniciar-MagicHandy.bat  Parar-MagicHandy.bat  README.md  go.mod  go.sum  install.ps1  start.bat  update.ps1
.claude/: launch.json
data/: magichandy.db-shm  magichandy.db-wal
data-test/: magichandy.db-shm  magichandy.db-wal
docs/: bluetooth-ownership.md  chat-voice-review.md  chat-voice.md  codebase-audit.md  connection-artwork.md  context.md  controller-dispatch-semantics.md  feature-ideas.md  getting-started.md  goal-scorecard.md  goals-and-guardrails.md  gui-installer.md  hsp-v4-invariants.md  installation-automation.md  intiface.md  legacy-lessons-sweep-2026-07-11.md  legacy-parity-sweep-2026-07.md  llm-control-surface.md  localization-wording.md  lso-merge-alternatives.md  lso-merge-integration.md  model-management.md  motion-pathway-review-2026-07-20.md  motion-retargeting.md  neutts-air-spike.md  neutts-quality-performance.md  neutts-worker.md  parity-with-stgpt-rv.md  pattern-library.md  perf-baseline.md  procedural-chat-motion-analysis.md  prompt-localization-strategy.md  react-ui-implementation-handoff.md  risk-register.md  settings-compaction.md  setup-wizard-design.md  source-installer.md  stgpt-rv-prompt-inventory.md  ui-design-guidelines.md  ui-design.md  (+7 more)
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/: app.css  (+14 more)
workers/neucodec-encoder/: Cargo.toml
workers/neucodec-encoder/src/: main.rs
(+696 files in other folders)
